Complete image and logo portion

--- a/intermediate_HTML_CSS/signup_form_project/index.html
+++ b/intermediate_HTML_CSS/signup_form_project/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="left_image">
+        <img src="/images/backgroundimage.jpg" class="background_image">
+        <div class="logo">
+                <img src="/images/odin_logo.png" class="logo_image">
+                <span class="odin_text">ODIN</span>
+        </div>
+    </div>
+    <div class="singup_section">
+
+    </div>
 </body>
 </html>
