Add credits sections for photo

--- a/intermediate_HTML_CSS/signup_form_project/index.html
+++ b/intermediate_HTML_CSS/signup_form_project/index.html
@@ -13,6 +13,7 @@
                 <img src="/images/odin_logo.png" class="logo_image">
                 <span class="odin_text">ODIN</span>
         </div>
+        <div class="credits">Photo by <a href="https://unsplash.com/@haliewestphoto">Halie West</a> on <a href="https://unsplash.com/photos/green-leaf-plant-in-close-up-photography-25xggax4bSA">unsplash</a></div>
     </div>
     <div class="singup_section">
 
