Create info section

--- a/intermediate_HTML_CSS/signup_form_project/index.html
+++ b/intermediate_HTML_CSS/signup_form_project/index.html
@@ -16,7 +16,12 @@
         <div class="credits">Photo by <a href="https://unsplash.com/@haliewestphoto">Halie West</a> on <a href="https://unsplash.com/photos/green-leaf-plant-in-close-up-photography-25xggax4bSA">unsplash</a></div>
     </div>
     <div class="singup_section">
-
+        <form action="">
+            <div class="info">
+                <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started.</p>
+                <p>You know you want to.</p>
+            </div>
+        </form>
     </div>
 </body>
 </html>
