Complete input section

--- a/intermediate_HTML_CSS/signup_form_project/index.html
+++ b/intermediate_HTML_CSS/signup_form_project/index.html
@@ -15,11 +15,44 @@
         </div>
         <div class="credits">Photo by <a href="https://unsplash.com/@haliewestphoto">Halie West</a> on <a href="https://unsplash.com/photos/green-leaf-plant-in-close-up-photography-25xggax4bSA">unsplash</a></div>
     </div>
-    <div class="singup_section">
+    <div class="singup">
         <form action="">
             <div class="info">
                 <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started.</p>
                 <p>You know you want to.</p>
+            </div>
+            <div class="singup_section">
+                <p>Lets do this!</p>
+                <div class="input_row">
+                    <div class="row_item">
+                        <label for="first_name">FIRST NAME</label>
+                        <input type="text" id="first_name" name="first_name">
+                    </div>
+                    <div class="row_item">
+                        <label for="last_name">LAST NAME</label>
+                        <input type="text" id="last_name" name="last_name">
+                    </div>
+                </div>
+                <div class="input_row">
+                    <div class="row_item">
+                        <label for="email">EMAIL</label>
+                        <input type="email" id="email" name="email">
+                    </div>
+                    <div class="row_item">
+                        <label for="phone_number">PHONE NUMBER</label>
+                        <input type="number" id="phone_number" name="phone_number">
+                    </div>
+                </div>
+                <div class="input_row">
+                    <div class="row_item">
+                        <label for="password">PASSWORD</label>
+                        <input type="password" id="password" name="password">
+                    </div>
+                    <div class="row_item">
+                        <label for="password_confirm">CONFIRM PASSWORD</label>
+                        <input type="password_confirm" id="password_confirm">
+                    </div>
+                </div>
             </div>
         </form>
     </div>
