Complete signup and singin buttons

--- a/intermediate_HTML_CSS/signup_form_project/index.html
+++ b/intermediate_HTML_CSS/signup_form_project/index.html
@@ -54,6 +54,10 @@
                     </div>
                 </div>
             </div>
+            <div class="account_action">
+                <button type="submit">Create Account</button>
+                <p>Already have an account?<a>Log in</a></p>
+            </div>
         </form>
     </div>
 </body>
