Create html layout

--- a/intermediate_HTML_CSS/admin_dashboard_project/index.html
+++ b/intermediate_HTML_CSS/admin_dashboard_project/index.html
@@ -7,6 +7,66 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="page_container">
+
+        <div class="dashboard">
+            <div class="logo_dash">
+
+            </div>
+            <div class="nav_dash">
+
+            </div>
+            <div class="setting_dash">
+
+            </div>
+        </div>
+
+        <div class="head">
+            <div class="top_bar">
+                <div class="search">
+
+                </div>
+                <div class="profile">
+
+                </div>
+            </div>
+            <div class="quick_nav">
+                <div class="account">
+                    <div class="profile_pic">
+
+                    </div>
+                    <div class="greeting">
+
+                    </div>
+                </div>
+                <div class="nav_options">
+
+                </div>
+            </div>
+        </div>
+
+        <div class="main_nav">
+
+            <div class="projects">
+                <div class="project_cards">
+
+                </div>
+            </div>
+
+            <div class="announcements_section">
+                <div class="announcements">
+
+                </div>
+            </div>
+
+            <div class="trending_section">
+                <div class="trending_profiles">
+
+                </div>
+            </div>
+
+        </div>
+
+    </div>
 </body>
 </html>
