Create and style dashboard icon

--- a/intermediate_HTML_CSS/admin_dashboard_project/index.html
+++ b/intermediate_HTML_CSS/admin_dashboard_project/index.html
@@ -11,7 +11,7 @@
 
         <div class="dashboard">
             <div class="logo_dash">
-                <img src="/icons/dash_icon.svg" class="dash_icon icon">
+                <img src="/icons/dash_icon.svg" class="icon">
                 <p>Dashboard</p>
             </div>
             <div class="nav_dash">
