Markup and style nav_dash

--- a/intermediate_HTML_CSS/admin_dashboard_project/index.html
+++ b/intermediate_HTML_CSS/admin_dashboard_project/index.html
@@ -14,9 +14,32 @@
                 <img src="/icons/dash_icon.svg" class="icon">
                 <p>Dashboard</p>
             </div>
-            <div class="nav_dash">
-
-            </div>
+            <ul class="nav_dash">
+                <li class="nav_dash_li">
+                    <img src="/icons/nav_dash_icons/home.svg" class="icon">
+                    <p>Home</p>
+                </li>
+                <li class="nav_dash_li">
+                    <img src="/icons/nav_dash_icons/profile.svg" class="icon">
+                    <p>Profile</p>
+                </li>
+                <li class="nav_dash_li">
+                    <img src="/icons/nav_dash_icons/messages.svg" class="icon">
+                    <p>Messages</p>
+                </li>
+                <li class="nav_dash_li">
+                    <img src="/icons/nav_dash_icons/history.svg" class="icon">
+                    <p>History</p>
+                </li>
+                <li class="nav_dash_li">
+                    <img src="/icons/nav_dash_icons/tasks.svg" class="icon">
+                    <p>Tasks</p>
+                </li>
+                <li class="nav_dash_li">
+                    <img src="/icons/nav_dash_icons/communities.svg" class="icon">
+                    <p>Communities</p>
+                </li>
+            </ul>
             <div class="setting_dash">
 
             </div>
