Markup and style setting_dash

--- a/intermediate_HTML_CSS/admin_dashboard_project/index.html
+++ b/intermediate_HTML_CSS/admin_dashboard_project/index.html
@@ -40,9 +40,20 @@
                     <p>Communities</p>
                 </li>
             </ul>
-            <div class="setting_dash">
-
-            </div>
+            <ul class="setting_dash">
+                <li class="setting_dash_li">
+                    <img src="/icons/setting_dash_icons/settings.svg" class="icon">
+                    <p>Settings</p>
+                </li>
+                <li class="setting_dash_li">
+                    <img src="/icons/setting_dash_icons/support.svg" class="icon">
+                    <p>Support</p>
+                </li>
+                <li class="setting_dash_li">
+                    <img src="/icons/setting_dash_icons/privacy.svg" class="icon">
+                    <p>Privacy</p>
+                </li>
+            </ul>
         </div>
 
         <div class="head">
