Markup and style search for head

--- a/intermediate_HTML_CSS/admin_dashboard_project/index.html
+++ b/intermediate_HTML_CSS/admin_dashboard_project/index.html
@@ -58,7 +58,8 @@
 
         <div class="head">
             <div class="search">
-
+                <label for="search_input"><img src="/icons/head_icons/search.svg" class="icon"></label>
+                <input type="text" id="search_input">
             </div>
             <div class="profile">
 
