--- a/intermediate_HTML_CSS/admin_dashboard_project/index.html
+++ b/intermediate_HTML_CSS/admin_dashboard_project/index.html
@@ -62,7 +62,9 @@
                 <input type="text" id="search_input">
             </div>
             <div class="profile">
-
+                <img src="icons/head_icons/notify.svg" class="icon">
+                <div class="profile_pic_background"><img src="/icons/profile_pics/main_profile.svg"></div>
+                <p>Bob Odin</p>
             </div>
             <div class="account">
                 <div class="profile_pic">
