Markup .head .account

--- a/intermediate_HTML_CSS/admin_dashboard_project/index.html
+++ b/intermediate_HTML_CSS/admin_dashboard_project/index.html
@@ -67,11 +67,10 @@
                 <p>Bob Odin</p>
             </div>
             <div class="account">
-                <div class="profile_pic">
-
-                </div>
+                <div class="profile_pic_background"><img src="/icons/profile_pics/main_profile.svg"></div>
                 <div class="greeting">
-
+                    <p>Hi there,</p>
+                    <p>Bob Odin (@bob)</p>
                 </div>
             </div>
             <div class="nav_options">
