Markup .head .nav_options

--- a/intermediate_HTML_CSS/admin_dashboard_project/index.html
+++ b/intermediate_HTML_CSS/admin_dashboard_project/index.html
@@ -74,7 +74,9 @@
                 </div>
             </div>
             <div class="nav_options">
-
+                <button class="nav_option_button">New</button>
+                <button class="nav_option_button">Upload</button>
+                <button class="nav_option_button">Share</button>
             </div>
         </div>
 
