Markup .main .projects

--- a/intermediate_HTML_CSS/admin_dashboard_project/index.html
+++ b/intermediate_HTML_CSS/admin_dashboard_project/index.html
@@ -84,7 +84,31 @@
 
             <div class="projects">
                 <div class="project_cards">
-
+                    <h2>Your Projects</h2>
+                    <div class="project_card">
+                        <h3>Super Cool Project</h3>
+                        <p class="project_desc">Sed tempus ut lacus ut scelerisque. Suspendisse soliticitudin nihl erat, id facilisis felis accumsan nec.</p>
+                    </div>
+                    <div class="project_card">
+                        <h3>Less Cool Project</h3>
+                        <p class="project_desc">Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. Curabitur dignissim nisi in tortor commodo, ac bibendum magna tincidunt.</p>
+                    </div>
+                    <div class="project_card">
+                        <h3>Impossible App</h3>
+                        <p class="project_desc">Sed tempus ut lacus ut scelerisque. Suspendisse soliticitudin nihl erat, id facilisis felis accumsan nec.</p>
+                    </div>
+                    <div class="project_card">
+                        <h3>Easy App</h3>
+                        <p class="project_desc">Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. Curabitur dignissim nisi in tortor commodo, ac bibendum magna tincidunt.</p>
+                    </div>
+                    <div class="project_card">
+                        <h3>Pubic Project</h3>
+                        <p class="project_desc">Sed tempus ut lacus ut scelerisque. Suspendisse soliticitudin nihl erat, id facilisis felis accumsan nec.</p>
+                    </div>
+                    <div class="project_card">
+                        <h3>Private Project</h3>
+                        <p class="project_desc">Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. Curabitur dignissim nisi in tortor commodo, ac bibendum magna tincidunt.</p>
+                    </div>
                 </div>
             </div>
 
