--- a/intermediate_HTML_CSS/admin_dashboard_project/index.html
+++ b/intermediate_HTML_CSS/admin_dashboard_project/index.html
@@ -114,7 +114,15 @@
 
             <div class="announcements_section">
                 <div class="announcements">
-
+                    <h2>Announcements</h2>
+                    <div class="accouncement_info">
+                        <h3>Site Maintenance</h3>
+                        <p>Sed tempus ut lacus ut scelerisque. Suspendisse soliticitudin nihl erat, id facilisis felis accumsan nec.</p>
+                        <h3>Community Share Day</h3>
+                        <p>Sed tempus ut lacus ut scelerisque. Suspendisse soliticitudin nihl erat, id facilisis felis accumsan nec.</p>
+                        <h3>Updated Privacy Policy</h3>
+                        <p>Sed tempus ut lacus ut scelerisque. Suspendisse soliticitudin nihl erat, id facilisis felis accumsan nec.</p>
+                    </div>
                 </div>
             </div>
 
