Correct spelling in announcement_info class

--- a/intermediate_HTML_CSS/admin_dashboard_project/index.html
+++ b/intermediate_HTML_CSS/admin_dashboard_project/index.html
@@ -115,7 +115,7 @@
             <div class="announcements_section">
                 <div class="announcements">
                     <h2>Announcements</h2>
-                    <div class="accouncement_info">
+                    <div class="announcement_info">
                         <h3>Site Maintenance</h3>
                         <p>Sed tempus ut lacus ut scelerisque. Suspendisse soliticitudin nihl erat, id facilisis felis accumsan nec.</p>
                         <h3>Community Share Day</h3>
