--- a/intermediate_HTML_CSS/admin_dashboard_project/index.html
+++ b/intermediate_HTML_CSS/admin_dashboard_project/index.html
@@ -127,28 +127,28 @@
             <div class="trending_section">
                 <div class="trending_profiles">
                     <div class="trending_project">
-                        <div class="profile_pic_background"><img src="icons/profile_pics/trending_profile_pics/trend1.svg" class="trending_profile_pic"></div>
+                        <div class="profile_pic_background num1"><img src="icons/profile_pics/trending_profile_pics/trend1.svg" class="trending_profile_pic1"></div>
                         <div class="trending_profile_info">
                             <h3>@frank</h3>
                             <h3>World Peace Builder</h3>
                         </div>
                     </div>
                     <div class="trending_project">
-                        <div class="profile_pic_background"><img src="icons/profile_pics/trending_profile_pics/trend2.svg" class="trending_profile_pic"></div>
+                        <div class="profile_pic_background num2"><img src="icons/profile_pics/trending_profile_pics/trend2.svg" class="trending_profile_pic2"></div>
                         <div class="trending_profile_info">
                             <h3>@bob</h3>
                             <h3>Super Cool Project</h3>
                         </div>
                     </div>
                     <div class="trending_project">
-                        <div class="profile_pic_background"><img src="icons/profile_pics/trending_profile_pics/trend3.svg" class="trending_profile_pic"></div>
+                        <div class="profile_pic_background num3"><img src="icons/profile_pics/trending_profile_pics/trend3.svg" class="trending_profile_pic3"></div>
                         <div class="trending_profile_info">
                             <h3>@john</h3>
                             <h3>Life Changing App</h3>
                         </div>
                     </div>
                     <div class="trending_project">
-                        <div class="profile_pic_background"><img src="icons/profile_pics/trending_profile_pics/trend4.svg" class="trending_profile_pic"></div>
+                        <div class="profile_pic_background num4"><img src="icons/profile_pics/trending_profile_pics/trend4.svg" class="trending_profile_pic4"></div>
                         <div class="trending_profile_info">
                             <h3>@alex</h3>
                             <h3>Navigator</h3>
