Add trending h2 to trending section

--- a/intermediate_HTML_CSS/admin_dashboard_project/index.html
+++ b/intermediate_HTML_CSS/admin_dashboard_project/index.html
@@ -125,6 +125,7 @@
                 </div>
 
             <div class="trending_section">
+                <h2>Trending</h2>
                 <div class="trending_profiles">
                     <div class="trending_project">
                         <div class="profile_pic_background num1"><img src="icons/profile_pics/trending_profile_pics/trend1.svg" class="trending_profile_pic1"></div>
