Create div to display book info

--- a/javascript/organizing_javascript_code/2_PROJECT_library/index.html
+++ b/javascript/organizing_javascript_code/2_PROJECT_library/index.html
@@ -8,6 +8,6 @@
     <script src="libraryProject.js" defer></script>
 </head>
 <body>
-    
+    <div class="book_container"></div>
 </body>
 </html>
