Markup header and footer

--- a/javascript/organizing_javascript_code/2_PROJECT_library/index.html
+++ b/javascript/organizing_javascript_code/2_PROJECT_library/index.html
@@ -8,6 +8,10 @@
     <script src="libraryProject.js" defer></script>
 </head>
 <body>
+    <div class="header">
+        <h1>My Books</h1>
+    </div>
     <div class="book_container"></div>
+    <button>+</button>
 </body>
 </html>
