Add class to add book button

--- a/javascript/organizing_javascript_code/2_PROJECT_library/index.html
+++ b/javascript/organizing_javascript_code/2_PROJECT_library/index.html
@@ -13,7 +13,7 @@
             <h1>My Books</h1>
         </div>
         <div class="book_container"></div>
-        <button>+</button>
+        <button class="add_book">+</button>
     </div>
 </body>
 </html>
