Style bottom and book container background

--- a/javascript/organizing_javascript_code/2_PROJECT_library/index.html
+++ b/javascript/organizing_javascript_code/2_PROJECT_library/index.html
@@ -13,7 +13,9 @@
             <h1>My Books</h1>
         </div>
         <div class="book_container"></div>
-        <button class="add_book">+</button>
+        <div class="bottom">
+            <button class="add_book">+</button>
+        </div>
     </div>
 </body>
 </html>
