Add class to displayed book cards

--- a/javascript/organizing_javascript_code/2_PROJECT_library/index.html
+++ b/javascript/organizing_javascript_code/2_PROJECT_library/index.html
@@ -12,7 +12,9 @@
         <div class="header">
             <h1>My Books</h1>
         </div>
-        <div class="book_container"></div>
+        <div class="book_container">
+            
+        </div>
         <div class="bottom">
             <button class="add_book">+</button>
         </div>
