Create dialog and form

--- a/javascript/organizing_javascript_code/2_PROJECT_library/index.html
+++ b/javascript/organizing_javascript_code/2_PROJECT_library/index.html
@@ -13,8 +13,16 @@
             <h1>My Books</h1>
         </div>
         <div class="book_container">
-            
+
         </div>
+        <dialog>
+            <form>
+                <input type="text" id="new_title" name="new_title" placeholder="title">
+                <input type="text" id="new_author" name="new_author" placeholder="author">
+                <input type="number" id="new_pages" name="new_pages" placeholder="number of pages">
+                <input type="text" id="read_status" name="read_status" placeholder="read? (true/false)">
+            </form>
+        </dialog>
         <div class="bottom">
             <button class="add_book">+</button>
         </div>
