Add submit button to form

--- a/javascript/organizing_javascript_code/2_PROJECT_library/index.html
+++ b/javascript/organizing_javascript_code/2_PROJECT_library/index.html
@@ -21,6 +21,7 @@
                 <input type="text" id="new_author" name="new_author" placeholder="author">
                 <input type="number" id="new_pages" name="new_pages" placeholder="number of pages">
                 <input type="text" id="read_status" name="read_status" placeholder="read? (true/false)">
+                <button type="submit">Add book</button>
             </form>
         </dialog>
         <div class="bottom">
