Link form and js

--- a/javascript/organizing_javascript_code/2_PROJECT_library/index.html
+++ b/javascript/organizing_javascript_code/2_PROJECT_library/index.html
@@ -16,7 +16,7 @@
 
         </div>
         <dialog>
-            <form>
+            <form method="post" action="#" onsubmit="return processForm()">
                 <input type="text" id="new_title" name="new_title" placeholder="title">
                 <input type="text" id="new_author" name="new_author" placeholder="author">
                 <input type="number" id="new_pages" name="new_pages" placeholder="number of pages">
