--- a/javascript/organizing_javascript_code/4_tic_tac_toe/index.html
+++ b/javascript/organizing_javascript_code/4_tic_tac_toe/index.html
@@ -8,6 +8,17 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <h1>Tic Tac Toe</h1>
+    <div class="grid_container">
+        <div class="single_grid" id="grid_0"></div>
+        <div class="single_grid" id="grid_1"></div>
+        <div class="single_grid" id="grid_2"></div>
+        <div class="single_grid" id="grid_3"></div>
+        <div class="single_grid" id="grid_4"></div>
+        <div class="single_grid" id="grid_5"></div>
+        <div class="single_grid" id="grid_6"></div>
+        <div class="single_grid" id="grid_7"></div>
+        <div class="single_grid" id="grid_8"></div>
+    </div>
 </body>
 </html>
