basic layout and styling

--- a/javascript/organizing_javascript_code/4_tic_tac_toe/index.html
+++ b/javascript/organizing_javascript_code/4_tic_tac_toe/index.html
@@ -10,15 +10,15 @@
 <body>
     <h1>Tic Tac Toe</h1>
     <div class="grid_container">
-        <div class="single_grid" id="grid_0"></div>
-        <div class="single_grid" id="grid_1"></div>
-        <div class="single_grid" id="grid_2"></div>
-        <div class="single_grid" id="grid_3"></div>
-        <div class="single_grid" id="grid_4"></div>
-        <div class="single_grid" id="grid_5"></div>
-        <div class="single_grid" id="grid_6"></div>
-        <div class="single_grid" id="grid_7"></div>
-        <div class="single_grid" id="grid_8"></div>
+        <div class="single_grid" id="0"></div>
+        <div class="single_grid" id="1"></div>
+        <div class="single_grid" id="2"></div>
+        <div class="single_grid" id="3"></div>
+        <div class="single_grid" id="4"></div>
+        <div class="single_grid" id="5"></div>
+        <div class="single_grid" id="6"></div>
+        <div class="single_grid" id="7"></div>
+        <div class="single_grid" id="8"></div>
     </div>
 </body>
 </html>
