Show win message dialog

--- a/javascript/organizing_javascript_code/4_tic_tac_toe/index.html
+++ b/javascript/organizing_javascript_code/4_tic_tac_toe/index.html
@@ -20,5 +20,11 @@
         <div class="single_grid" id="7"></div>
         <div class="single_grid" id="8"></div>
     </div>
+    <dialog>
+        <div class="win_message">
+
+        </div>
+        <button class="close">Close</button>
+    </dialog>
 </body>
 </html>
