--- a/javascript/javascript_in_the_real_world/2_form_validation/index.html
+++ b/javascript/javascript_in_the_real_world/2_form_validation/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form validation</title>
     <link rel="stylesheet" href="styles.css">
+    <script type="module" src="email.js" defer></script>
+    <script type="module" src="main.js"></script>
 </head>
 <body>
     <form novalidate>
