address bar below header

--- a/javascript/async_and_APIs/2_weather_app_project/planning/display/displayTemplate.html
+++ b/javascript/async_and_APIs/2_weather_app_project/planning/display/displayTemplate.html
@@ -17,5 +17,6 @@
             <button class="fc_selection">F</button>
         </div>
     </div>
+    <div class="address">Bethesda</div>
 </body>
 </html>
