Create background gradient

--- a/javascript/async_and_APIs/2_weather_app_project/planning/display/displayTemplate.html
+++ b/javascript/async_and_APIs/2_weather_app_project/planning/display/displayTemplate.html
@@ -17,6 +17,9 @@
             <button class="fc_selection">F</button>
         </div>
     </div>
-    <div class="address">Bethesda</div>
+    <div class="address">Bethesda (dynamic)</div>
+    <div class="body">
+        
+    </div>
 </body>
 </html>
