Markup and style template today section

--- a/javascript/async_and_APIs/2_weather_app_project/planning/display/displayTemplate.html
+++ b/javascript/async_and_APIs/2_weather_app_project/planning/display/displayTemplate.html
@@ -19,7 +19,58 @@
     </div>
     <div class="address">Bethesda (dynamic)</div>
     <div class="body">
-        
+        <div class="today">
+            <h2>Weather Today</h2>
+            <h3 class="temps_heading">Temps</h3>
+            <div class="today_left">
+                <div class="today_temps">
+                    <div class="today_temp">83</div>
+                    <div class="high_low">
+                        <div class="high">H:90</div>
+                        <div class="low">L:70</div>
+                    </div>
+                </div>
+                <div class="conditions">
+                    <img src="/icons/condition_icons/sun-svgrepo-com.svg" class="weather_icon">
+                    <p class="today_condition">Sunny</p>
+                </div>
+            </div>
+            <div class="property">
+                <div class="label">
+                    <img src="/icons/properties/sunrise-svgrepo-com.svg" class="property_icon">
+                    <p>Sunrise</p>
+                </div>
+                <p>7:00</p>
+            </div>
+            <div class="property">
+                <div class="label">
+                    <img src="/icons/properties/sunset-svgrepo-com.svg" class="property_icon">
+                    <p>Sunset</p>
+                </div>
+                <p>20:00</p>
+            </div>
+            <div class="property">
+                <div class="label">
+                    <img src="/icons/properties/humidity-svgrepo-com.svg" class="property_icon">
+                    <p>Humidity</p>
+                </div>
+                <p>12%</p>
+            </div>
+            <div class="property">
+                <div class="label">
+                    <img src="/icons/properties/uv-index-svgrepo-com.svg" class="property_icon">
+                    <p>UV-index</p>
+                </div>
+                <p>5</p>
+            </div>
+            <div class="property">
+                <div class="label">
+                    <img src="/icons/properties/visibility-eye-svgrepo-com.svg" class="property_icon">
+                    <p>Visibility</p>
+                </div>
+                <p>2mi</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
