Complete template html and css

--- a/javascript/async_and_APIs/2_weather_app_project/planning/display/displayTemplate.html
+++ b/javascript/async_and_APIs/2_weather_app_project/planning/display/displayTemplate.html
@@ -19,6 +19,7 @@
     </div>
     <div class="address">Bethesda (dynamic)</div>
     <div class="body">
+
         <div class="today">
             <h2>Weather Today</h2>
             <h3 class="temps_heading">Temps</h3>
@@ -69,6 +70,26 @@
                     <p>Visibility</p>
                 </div>
                 <p>2mi</p>
+            </div>
+        </div>
+
+        <div class="now">
+            <h2>Weather Now</h2>
+            <div class="temp_feels_now">
+                <p class="temp_now">80</p>
+                <p class="feelslike_now">Feels like : 82</p>
+            </div>
+            <div class="condition_now">
+                <img src="/icons/condition_icons/cloud-svgrepo-com.svg" class="now_condition">
+                <p class="condition_now_desc">Cloudy</p>
+            </div>
+        </div>
+
+        <div class="next24">
+            <div class="hour">
+                <img src="/icons/condition_icons/weather-partly-cloudy-day-svgrepo-com.svg" class="hour_icon">
+                <p>time</p>
+                <p>temp</p>
             </div>
         </div>
     </div>
