Add classes to properties for easy js access

--- a/javascript/async_and_APIs/2_weather_app_project/planning/display/displayTemplate.html
+++ b/javascript/async_and_APIs/2_weather_app_project/planning/display/displayTemplate.html
@@ -36,38 +36,39 @@
                     <p class="today_condition">Sunny</p>
                 </div>
             </div>
+
             <div class="property">
                 <div class="label">
                     <img src="/icons/properties/sunrise-svgrepo-com.svg" class="property_icon">
                     <p>Sunrise</p>
                 </div>
-                <p>7:00</p>
+                <p class="sunrise">7:00</p>
             </div>
             <div class="property">
                 <div class="label">
                     <img src="/icons/properties/sunset-svgrepo-com.svg" class="property_icon">
-                    <p>Sunset</p>
+                    <p class="sunset">Sunset</p>
                 </div>
                 <p>20:00</p>
             </div>
             <div class="property">
                 <div class="label">
                     <img src="/icons/properties/humidity-svgrepo-com.svg" class="property_icon">
-                    <p>Humidity</p>
+                    <p class="humidity">Humidity</p>
                 </div>
                 <p>12%</p>
             </div>
             <div class="property">
                 <div class="label">
                     <img src="/icons/properties/uv-index-svgrepo-com.svg" class="property_icon">
-                    <p>UV-index</p>
+                    <p class="uv_index">UV-index</p>
                 </div>
                 <p>5</p>
             </div>
             <div class="property">
                 <div class="label">
                     <img src="/icons/properties/visibility-eye-svgrepo-com.svg" class="property_icon">
-                    <p>Visibility</p>
+                    <p class="visibility">Visibility</p>
                 </div>
                 <p>2mi</p>
             </div>
