--- a/javascript/async_and_APIs/2_weather_app_project/index.html
+++ b/javascript/async_and_APIs/2_weather_app_project/index.html
@@ -5,9 +5,95 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
+    <!-- <script src="script.js" defer></script> -->
 </head>
 <body>
-    
+    <div class="header">
+        <div class="left_header">
+            <img src="/icons/logo.svg">
+            <p>Weather</p>
+        </div>
+        <div class="right_header">
+            <input type="text" placeholder="Search City">
+            <button class="fc_selection">F</button>
+        </div>
+    </div>
+    <div class="address">Bethesda (dynamic)</div>
+    <div class="body">
+
+        <div class="today">
+            <h2>Weather Today</h2>
+            <h3 class="temps_heading">Temps</h3>
+            <div class="today_left">
+                <div class="today_temps">
+                    <div class="today_temp">83</div>
+                    <div class="high_low">
+                        <div class="high">H:90</div>
+                        <div class="low">L:70</div>
+                    </div>
+                </div>
+                <div class="conditions">
+                    <img src="/icons/condition_icons/sun-svgrepo-com.svg" class="weather_icon">
+                    <p class="today_condition">Sunny</p>
+                </div>
+            </div>
+
+            <div class="property">
+                <div class="label">
+                    <img src="/icons/properties/sunrise-svgrepo-com.svg" class="property_icon">
+                    <p>Sunrise</p>
+                </div>
+                <p class="sunrise">7:00</p>
+            </div>
+            <div class="property">
+                <div class="label">
+                    <img src="/icons/properties/sunset-svgrepo-com.svg" class="property_icon">
+                    <p class="sunset">Sunset</p>
+                </div>
+                <p>20:00</p>
+            </div>
+            <div class="property">
+                <div class="label">
+                    <img src="/icons/properties/humidity-svgrepo-com.svg" class="property_icon">
+                    <p class="humidity">Humidity</p>
+                </div>
+                <p>12%</p>
+            </div>
+            <div class="property">
+                <div class="label">
+                    <img src="/icons/properties/uv-index-svgrepo-com.svg" class="property_icon">
+                    <p class="uv_index">UV-index</p>
+                </div>
+                <p>5</p>
+            </div>
+            <div class="property">
+                <div class="label">
+                    <img src="/icons/properties/visibility-eye-svgrepo-com.svg" class="property_icon">
+                    <p class="visibility">Visibility</p>
+                </div>
+                <p>2mi</p>
+            </div>
+        </div>
+
+        <div class="now">
+            <h2>Weather Now</h2>
+            <div class="temp_feels_now">
+                <p class="temp_now">80</p>
+                <p class="feelslike_now">Feels like : 82</p>
+            </div>
+            <div class="condition_now">
+                <img src="/icons/condition_icons/cloud-svgrepo-com.svg" class="now_condition">
+                <p class="condition_now_desc">Cloudy</p>
+            </div>
+        </div>
+
+        <div class="next24">
+            <div class="hour">
+                <img src="/icons/condition_icons/weather-partly-cloudy-day-svgrepo-com.svg" class="hour_icon">
+                <p>time</p>
+                <p>temp</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
