--- a/javascript/async_and_APIs/2_weather_app_project/index.html
+++ b/javascript/async_and_APIs/2_weather_app_project/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- <script src="script.js" defer></script> -->
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="header">
@@ -14,7 +14,7 @@
             <p>Weather</p>
         </div>
         <div class="right_header">
-            <input type="text" placeholder="Search City">
+            <input type="text" placeholder="Search City" class="text_input">
             <button class="fc_selection">F</button>
         </div>
     </div>
