Move property class to where it displays value

--- a/javascript/async_and_APIs/2_weather_app_project/index.html
+++ b/javascript/async_and_APIs/2_weather_app_project/index.html
@@ -48,30 +48,30 @@
             <div class="property">
                 <div class="label">
                     <img src="/icons/properties/sunset-svgrepo-com.svg" class="property_icon">
-                    <p class="sunset">Sunset</p>
+                    <p>Sunset</p>
                 </div>
-                <p>20:00</p>
+                <p class="sunset">20:00</p>
             </div>
             <div class="property">
                 <div class="label">
                     <img src="/icons/properties/humidity-svgrepo-com.svg" class="property_icon">
-                    <p class="humidity">Humidity</p>
+                    <p>Humidity</p>
                 </div>
-                <p>12%</p>
+                <p class="humidity">12%</p>
             </div>
             <div class="property">
                 <div class="label">
                     <img src="/icons/properties/uv-index-svgrepo-com.svg" class="property_icon">
-                    <p class="uv_index">UV-index</p>
+                    <p>UV-index</p>
                 </div>
-                <p>5</p>
+                <p class="uv_index">5</p>
             </div>
             <div class="property">
                 <div class="label">
                     <img src="/icons/properties/visibility-eye-svgrepo-com.svg" class="property_icon">
-                    <p class="visibility">Visibility</p>
+                    <p>Visibility</p>
                 </div>
-                <p>2mi</p>
+                <p class="visibility">2mi</p>
             </div>
         </div>
 
