Add contents to seperate files

--- a/javascript/async_and_APIs/2_weather_app_project/index.html
+++ b/javascript/async_and_APIs/2_weather_app_project/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="/objects/globalSettings.js" defer></script>
-    <script src="/objects/doc.js" defer></script>
-    <script src="/displayFunctions/displayHeader.js" defer></script>
-    <script src="/displayFunctions/displayNext24.js" defer></script>
-    <script src="/displayFunctions/displayToday.js" defer></script>
-    <script src="script.js" defer></script>
+    <script type="module" src="/objects/globalSettings.js" defer></script>
+    <script type="module" src="/objects/doc.js" defer></script>
+    <script type="module" src="/displayFunctions/displayHeader.js" defer></script>
+    <script type="module" src="/displayFunctions/displayNext24.js" defer></script>
+    <script type="module" src="/displayFunctions/displayToday.js" defer></script>
+    <script type="module" src="script.js" defer></script>
 </head>
 <body>
     <div class="header">
