Create function that finds index of hour

--- a/javascript/async_and_APIs/2_weather_app_project/index.html
+++ b/javascript/async_and_APIs/2_weather_app_project/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles.css">
     <script type="module" src="/objects/globalSettings.js" defer></script>
     <script type="module" src="/objects/doc.js" defer></script>
+    <script type="module" src="/objects/findCurrentHour.js"></script>
+    <script type="module" src="/objects/processCondition.js"></script>
     <script type="module" src="/displayFunctions/displayHeader.js" defer></script>
     <script type="module" src="/displayFunctions/displayNext24.js" defer></script>
     <script type="module" src="/displayFunctions/displayToday.js" defer></script>
