Add data heading in now section

--- a/javascript/async_and_APIs/2_weather_app_project/index.html
+++ b/javascript/async_and_APIs/2_weather_app_project/index.html
@@ -84,6 +84,7 @@
 
         <div class="now">
             <h2>Weather Now</h2>
+            <div class="date_time_now">Date</div>
             <div class="temp_feels_now">
                 <p class="temp_now">80</p>
                 <p class="feelslike_now">Feels like : 82</p>
